--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "grammy": "^1.17.2",
-    "node-nlp": "^4.27.0",
+    "natural": "^6.7.2",
+    "node-nlp": "^3.10.2",
     "path": "^0.12.7"
   },
   "packageManager": "yarn@3.6.1"
